--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "huzaif_resume",
   "version": "0.1.0",
-  "homepage": "https://Huzzzaif.github.io/huzaif_resume",
+  "homepage": "https://Huzzzaif.github.io/huzaif_resume1",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
